{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 8,
  "lineage": "2e4f0dbf-99d6-ba3e-a464-b6592afcd109",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-21T08:22:33.430-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/using-terraf-156-91e68a5c/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/networks/auto-net",
            "priority": 1000,
            "project": "using-terraf-156-91e68a5c",
            "self_link": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.auto-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-21T08:22:33.300-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/using-terraf-156-91e68a5c/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/networks/auto-net",
            "priority": 1000,
            "project": "using-terraf-156-91e68a5c",
            "self_link": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.auto-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-21T08:22:33.296-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/using-terraf-156-91e68a5c/global/firewalls/sa-ssh",
            "log_config": [],
            "name": "sa-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/networks/auto-net",
            "priority": 1000,
            "project": "using-terraf-156-91e68a5c",
            "self_link": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/firewalls/sa-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [
              "mainsa@using-terraf-156-91e68a5c.iam.gserviceaccount.com"
            ],
            "source_tags": null,
            "target_service_accounts": [
              "mainsa@using-terraf-156-91e68a5c.iam.gserviceaccount.com"
            ],
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.auto-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-9-v20230912",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/zones/us-west1-b/disks/using-terraf-156-91e68a5c-auto-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/using-terraf-156-91e68a5c/zones/us-west1-b/instances/using-terraf-156-91e68a5c-auto-server",
            "instance_id": "5860482410388513081",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "iMvTRG9Kdiw=",
            "name": "using-terraf-156-91e68a5c-auto-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.197.120.244",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/networks/auto-net",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/regions/us-west1/subnetworks/auto-subnet",
                "subnetwork_project": "using-terraf-156-91e68a5c"
              }
            ],
            "project": "using-terraf-156-91e68a5c",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/zones/us-west1-b/instances/using-terraf-156-91e68a5c-auto-server",
            "service_account": [
              {
                "email": "mainsa@using-terraf-156-91e68a5c.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-ssh"
            ],
            "tags_fingerprint": "LfyOV3jN6cE=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "data.google_compute_image.centos-9",
            "google_compute_network.auto-net",
            "google_compute_subnetwork.auto-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "auto-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/using-terraf-156-91e68a5c/global/networks/auto-net",
            "mtu": 0,
            "name": "auto-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "using-terraf-156-91e68a5c",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/networks/auto-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "auto-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-21T08:22:36.304-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/using-terraf-156-91e68a5c/regions/us-west1/subnetworks/auto-subnet",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "auto-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/global/networks/auto-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "using-terraf-156-91e68a5c",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.3.0.0/23",
                "range_name": "auto-subnet-pods"
              },
              {
                "ip_cidr_range": "10.3.2.0/23",
                "range_name": "auto-subnet-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/using-terraf-156-91e68a5c/regions/us-west1/subnetworks/auto-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.auto-net"
          ]
        }
      ]
    }
  ]
}